# skepa-db

./: .gitignore  Cargo.toml  README.md  Syntax.md
.github/: release-notes-template.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  compatibility.md  performance.md  release-process.md  server-operations.md  sql-dialect.md  storage.md  transactions.md  upgrades.md  v1-release-checklist.md
docs/releases/: v1.0.0.md  v1.1.0.md
skepa_db_cli/: Cargo.toml
skepa_db_cli/src/: main.rs
skepa_db_cli/src/parser/: command.rs
skepa_db_cli/src/types/: types.rs
skepa_db_core/: Cargo.toml
skepa_db_core/benches/: core_workloads.rs
skepa_db_core/src/: config.rs  error.rs  execution_stats.rs  legacy_render.rs  lib.rs  query_result.rs  recovery.rs  storage_test_hooks.rs  transactions.rs
skepa_db_core/src/engine/: execute.rs  format.rs  mod.rs
skepa_db_core/src/engine/execute/: constraints.rs  ddl.rs  describe.rs  dispatch.rs  dml.rs  filter_project.rs  foreign_keys.rs  mutations.rs  referential.rs  select.rs
skepa_db_core/src/parser/: command.rs  mod.rs  parser.rs
skepa_db_core/src/parser/parser/: alter.rs  common.rs  create.rs  dml.rs  select.rs  tokenizer.rs  tx.rs  where_clause.rs
skepa_db_core/src/storage/: catalog.rs  disk.rs  engine.rs  mem.rs  migrations.rs  mod.rs  persistence.rs  schema.rs
skepa_db_core/src/storage/catalog/: constraints.inc.rs  core.inc.rs  persistence.inc.rs
skepa_db_core/src/storage/disk/: engine_impl.rs  helpers.rs  lifecycle.rs
skepa_db_core/src/types/: datatype.rs  mod.rs  value.rs
skepa_db_server/: Cargo.toml
skepa_db_server/src/: main.rs
skepa_db_tests/: Cargo.toml
(+32 files in other folders)
