[package]
name = "skepa_db_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
skepa_db_core = { path = "../skepa_db_core" }
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
