[package]
name = "skepa_db_core"
version = "1.0.0"
edition = "2024"

[dependencies]
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = "1"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "core_workloads"
harness = false
